# data_analysis_system

./: README.md  pyproject.toml  requirements.txt
client/: package-lock.json  package.json
client/src/: App.vue  main.ts
client/src/api/: analysis.ts  auth.ts  data.ts  index.ts  rustApi.ts  todos.ts
client/src/assets/: main.css
client/src/components/: KpiCard.vue
client/src/components/icons/: GithubIcon.vue
client/src/layouts/: MainLayout.vue
client/src/router/: index.ts
client/src/store/: auth.ts
client/src/types/: auth.ts
client/src/views/: AboutView.vue  AnalysisView.vue  DashboardView.vue  DataManagementView.vue  LoginView.vue  TodosView.vue
python-analysis/: app.py
python-analysis/sh/: cleanup_data.py  db_setup.py  generate_students.py  generate_todos.py  generate_users.py
rust-optimizer/: .env  Cargo.toml
rust-optimizer/src/: handlers.rs  main.rs  models.rs
server/: ..env.un~  .env  app.js  package-lock.json  package.json
server/controllers/: analysisController.js  authController.js  dataController.js  todoController.js
server/middleware/: authMiddleware.js
server/models/: Student.js  Todo.js  User.js
server/routes/: analysis.js  auth.js  data.js  todo.js
server/utils/: db.js
