[package]
name = "rust-optimizer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "chrono" ] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5.2", features = ["cors"] }
regex = "1.10.5"